Bug fix for ESPER-184, minor doc changes; ArrayDequeJDK6Backport for ESPER-183
git-svn-id: http://svn.codehaus.org/esper/esper/trunk@1130 d91eb1b3-1215-0410-9718-d41490442091